--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <script   src="js/jquery-3.4.0.js"></script>
+  <script src="js/scripts.js"></script>
+    <title>PIG DICE GAME</title>
   </head>
+  <h1>PIG DICE GAME</h1>
   <body>
 
   </body>
