--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
   </head>
   <h1>PIG DICE GAME</h1>
   <body>
+    <div class="container">
+      <div class="sheria">
+        <div class="card-deck">
+          <div class="card">
+            <h3>RULES OF THE GAME</h3>
+            <ol>
+              <li>Want to roll the dice??Wait for your turn</li>
+              <li>Satisfied with your score??Hold so as to get the cummulative points. </li>
+              <li>If you roll a "1" then you cannot play till the other player has played.</li>
+              <li>The first player to gain a hundred points WINS!!!</li>
+            </ol>
+            <p>MAY THE BEST DICE ROLLER WIN</p>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
