--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
             <p>MAY THE BEST DICE ROLLER WIN</p>
       </div>
     </div>
-    
-  </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          PLAYER 1
+          <img src="img/dice1.jpg" alt="">
+          TOTAL SCORE
+        </div>
 
+      </div>
+
+
+    </div>
   </body>
 </html>
