--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <title>PIG DICE GAME</title>
   </head>
   <h1>PIG DICE GAME</h1>
-  <body>
-    <div class="container">
+  <body class="container">
       <div class="card-deck">
         <div class="card">
             <h3>RULES OF THE GAME</h3>
@@ -23,18 +22,22 @@
             <p>MAY THE BEST DICE ROLLER WIN</p>
       </div>
     </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          PLAYER 1
-          <img src="img/dice1.jpg" alt="">
-          TOTAL SCORE
-        </div>
 
+      <div class="playing">
+        <div class="row">
+          <div class="col-md-6">
+            <h3>PLAYER 1</h3>
+
+          </div>
+        </div>
+        <div class="col-md-6">
+          
+
+        </div>
       </div>
 
 
-    </div>
+
+
   </body>
 </html>
