Add sheria class as a div

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body class="container">
       <div class="card-deck">
         <div class="card">
+          <div class="sheria">
             <h3>RULES OF THE GAME</h3>
             <ol>
               <li>Want to roll the dice??Wait for your turn</li>
@@ -20,6 +21,7 @@
               <li>The first player to gain a hundred points WINS!!!</li>
             </ol>
             <p>MAY THE BEST DICE ROLLER WIN</p>
+        </div>
       </div>
     </div>
 
