Add the cards and the paragrapghs to the webpage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li>If you roll a "1" then you cannot play till the other player has played.</li>
               <li>The first player to gain a hundred points WINS!!!</li>
             </ol>
-            <p>MAY THE BEST DICE ROLLER WIN</p>
+            <p>MAY THE BEST DICE ROLLER WIN!!!!</p>
         </div>
       </div>
     </div>
@@ -28,13 +28,21 @@
       <div class="playing">
         <div class="row">
           <div class="col-md-6">
+            <div class="card">
               <h3>PLAYER 1</h3>
+              <p>SCORE</p>
+              <p>TOTAL</p>
 
+              </div>
             </div>
           <div class="col-md-6">
-            <h3>PLAYER 2</h3>
-
-          </div>
+            <div class="card">
+              <h3>PLAYER 2</h3>
+              <p>SCORE</p>
+              <p>TOTAL</p>
+              
+             </div>
+            </div>
           </div>
         </div>
 
