Add h4 tothe webpage structure

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <li>If you roll a "1" then you cannot play till the other player has played.</li>
               <li>The first player to gain a hundred points WINS!!!</li>
             </ol>
-            <p>MAY THE BEST DICE ROLLER WIN!!!!</p>
+            <h4>MAY THE BEST DICE ROLLER WIN!!!!</h4>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
               <h3>PLAYER 2</h3>
               <p>SCORE</p>
               <p>TOTAL</p>
-              
+
              </div>
             </div>
           </div>
