--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <title>PIG DICE GAME</title>
   </head>
   <h1>PIG DICE GAME</h1>
-  <body class="container">
-      <div class="card-deck">
+  <body
+      <div class="container">
         <div class="card">
-          <div class="sheria">
+           <div class="sheria">
             <h3>RULES OF THE GAME</h3>
             <ol>
               <li>Want to roll the dice??Wait for your turn</li>
@@ -23,7 +23,6 @@
             <h4>MAY THE BEST DICE ROLLER WIN!!!!</h4>
         </div>
       </div>
-    </div>
 
       <div class="playing">
         <div class="row">
@@ -50,6 +49,6 @@
 
 
 
-
+    </div>
   </body>
 </html>
