--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body
       <div class="container">
         <div class="card">
-           <div class="sheria">
+          <div class="sheria">
+
+
             <h3>RULES OF THE GAME</h3>
             <ol>
               <li>Want to roll the dice??Wait for your turn</li>
@@ -23,32 +25,23 @@
             <h4>MAY THE BEST DICE ROLLER WIN!!!!</h4>
         </div>
       </div>
-
       <div class="playing">
         <div class="row">
           <div class="col-md-6">
-            <div class="card">
               <h3>PLAYER 1</h3>
-              <p>SCORE</p>
-              <p>TOTAL</p>
-
+              <p>SCORE:</p>
+              <p>TOTAL:</p>
               </div>
-            </div>
-          <div class="col-md-6">
-            <div class="card">
-              <h3>PLAYER 2</h3>
-              <p>SCORE</p>
-              <p>TOTAL</p>
-
-             </div>
+           <div class="pun">
+             <div class="col-md-6">
+              <h3>PLAYER2</h3>
+              <p>SCORE:</p>
+              <p>TOTAL:</p>
+              </div>
             </div>
           </div>
         </div>
+      </div>
 
-
-
-
-
-    </div>
   </body>
 </html>
