--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
       <div class="playing">
         <div class="row">
           <div class="col-md-6">
-              <h3>PLAYER 1</h3>
+              <h2>PLAYER 1</h2>
               <p>SCORE:</p>
               <p>TOTAL:</p>
+              <button type="button" name="ROLL">ROLL</button>
+              <button type="button" name="HOLD">HOLD</button>
               </div>
-           <div class="pun">
              <div class="col-md-6">
-              <h3>PLAYER2</h3>
+              <h2>PLAYER 2</h2>
               <p>SCORE:</p>
               <p>TOTAL:</p>
+              <button type="button" name="ROLL">ROLL</button>
+              <button type="button" name="HOLD">HOLD</button>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
   </body>
 </html>
