Add the changes to the webpage for toggling functionality

--- a/index.html
+++ b/index.html
@@ -25,21 +25,28 @@
             <h4>MAY THE BEST DICE ROLLER WIN!!!!</h4>
         </div>
       </div>
+
+      <div class="ficha">
+        <h4>CLICK THE BUTTON BELOW TO PLAY</h4>
+        <button type="submit" name="PLAY">PLAY</button>
+
+      </div>
+
       <div class="playing">
         <div class="row">
           <div class="col-md-6">
               <h2>PLAYER 1</h2>
               <p>SCORE:</p>
               <p>TOTAL:</p>
-              <button type="button" name="ROLL">ROLL</button>
-              <button type="button" name="HOLD">HOLD</button>
+              <button type="submit" name="ROLL">ROLL</button>
+              <button type="submit" name="HOLD">HOLD</button>
               </div>
              <div class="col-md-6">
               <h2>PLAYER 2</h2>
               <p>SCORE:</p>
               <p>TOTAL:</p>
-              <button type="button" name="ROLL">ROLL</button>
-              <button type="button" name="HOLD">HOLD</button>
+              <button type="submit" name="ROLL">ROLL</button>
+              <button type="submit" name="HOLD">HOLD</button>
               </div>
             </div>
           </div>
