Add the changes to webpages

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               <h2>PLAYER 1</h2>
               <p>SCORE:</p>
               <p>TOTAL:</p>
-              <button type="submit" name="ROLL">ROLL</button>
-              <button type="submit" name="HOLD">HOLD</button>
+              <button type="submit" id="ROLL">ROLL</button>
+              <button type="submit" id="HOLD">HOLD</button>
               </div>
              <div class="col-md-6">
               <h2>PLAYER 2</h2>
