--- a/index.html
+++ b/index.html
@@ -35,18 +35,22 @@
       <div class="playing">
         <div class="row">
           <div class="col-md-6">
-              <h2>PLAYER 1</h2>
-              <p>SCORE:</p>
-              <p>TOTAL:</p>
-              <button type="submit" id="ROLL">ROLL</button>
-              <button type="submit" id="HOLD">HOLD</button>
-              </div>
+
+                <h2>PLAYER 1</h2>
+                <p>SCORE:</p>
+                <p>TOTAL:</p>
+                <button type="submit" id="ROLL1">ROLL</button>
+                <button type="submit" id="HOLD1">HOLD</button>
+
+          </div>
              <div class="col-md-6">
-              <h2>PLAYER 2</h2>
-              <p>SCORE:</p>
-              <p>TOTAL:</p>
-              <button type="submit" name="ROLL">ROLL</button>
-              <button type="submit" name="HOLD">HOLD</button>
+               <div class="play">
+                 <h2>PLAYER 2</h2>
+                 <p>SCORE:</p>
+                 <p>TOTAL:</p>
+                 <button type="submit" id="ROLL2">ROLL</button>
+                 <button type="submit" id="HOLD2">HOLD</button>
+                </div>
               </div>
             </div>
           </div>
