Fix the changes on the webpage

--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
       <div class="playing">
         <div class="row">
           <div class="col-md-6">
-
                 <h2>PLAYER 1</h2>
                 <p>SCORE:</p>
                 <p>TOTAL:</p>
-                <button type="submit" id="ROLL1">ROLL</button>
-                <button type="submit" id="HOLD1">HOLD</button>
+                <button type="submit" class="roll1">ROLL</button>
+                <button type="submit" class="hold1">HOLD</button>
 
           </div>
              <div class="col-md-6">
