Add the classes to rectify errors

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       <div class="playing">
         <div class="row">
           <div class="col-md-6">
-                <h2>PLAYER 1</h2>
-                <p>SCORE:</p>
-                <p>TOTAL:</p>
-                <button type="submit" class="roll1">ROLL</button>
-                <button type="submit" class="hold1">HOLD</button>
+                <h2 class="player1">PLAYER 1</h2>
+                <p class="score1">SCORE:</p>
+                <p class="total1">TOTAL:</p>
+                <button type="submit" id="roll1">ROLL</button>
+                <button type="submit" id="hold1">HOLD</button>
 
           </div>
              <div class="col-md-6">
                <div class="play">
-                 <h2>PLAYER 2</h2>
-                 <p>SCORE:</p>
-                 <p>TOTAL:</p>
-                 <button type="submit" id="ROLL2">ROLL</button>
+                 <h2 class="player2">PLAYER 2</h2>
+                 <p class="score2">SCORE:</p>
+                 <p class="total2">TOTAL:</p>
+                 <button type="submit" id="roll2">ROLL</button>
                  <button type="submit" id="HOLD2">HOLD</button>
                 </div>
               </div>
